--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,5 +1,5 @@
 <div id="registerPage">
-	<h1 id="registerHeader">Register</h1>
+	<h1>Register</h1>
 	<h4 id="registerText">to gain access to scheduling and reviews!</h4>
 
 	<div id="registerContainer">
