--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,50 +1,49 @@
 <h1>Settings</h1>
 
 <form method="POST">
-			<p>Small Dogs</p>
-			<select id="smallDogs" name="smallDogs">
+	<div id="dogContainer">
+		<div class="dogSelectors">
+			<img src="images/dog-icon.png" id="smlDogImg">
+			<label id="smallDogLabel" class="dogLabels">Small Dogs</label>
+			<select id="smallDogs" name="smallDogs" class="numDogSelector">
 				<option>0</option>
 				<option>1</option>
 				<option>2</option>
 				<option>3</option>
 				<option>4</option>
 				<option>5</option>
-				<option>6</option>
-				<option>7</option>
-				<option>8</option>
-				<option>9</option>
 			</select>
-
-			<p>Medium Dogs</p>
-			<select id="mediumDogs" name="mediumDogs">
+		</div>
+		<div class="dogSelectors">
+			<img src="images/dog-icon.png" id="medDogImg">
+			<label id="mediumDogLabel" class="dogLabels">Medium Dogs</label>
+			<select id="mediumDogs" name="mediumDogs" class="numDogSelector">
 				<option>0</option>
 				<option>1</option>
 				<option>2</option>
 				<option>3</option>
 				<option>4</option>
 				<option>5</option>
-				<option>6</option>
-				<option>7</option>
-				<option>8</option>
-				<option>9</option>
 			</select>
-
-			<p>Large Dogs</p>
-			<select id="largeDogs" name="largeDogs">
+		</div>
+		<div class="dogSelectors">
+			<img src="images/dog-icon.png" id="lrgDogImg">
+			<label id="largeDogLabel" class="dogLabels">Large Dogs</label>
+			<select id="largeDogs" name="largeDogs" class="numDogSelector">
 				<option>0</option>
 				<option>1</option>
 				<option>2</option>
 				<option>3</option>
 				<option>4</option>
 				<option>5</option>
-				<option>6</option>
-				<option>7</option>
-				<option>8</option>
-				<option>9</option>
 			</select>
-			<input type="submit" value="Submit">
+		</div>
+		
+	</div>
+	<div id="dogSubmit">
+		<input type="submit" value="Submit">
+	</div>
 </form>
-
 
 
 <!-- 
