--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -7,7 +7,7 @@
 		<div id="legend"></div>
 
 		<div>
-			<h2>Description: </h2>
+			<h2>Description:</h2>
 			<p>Rating: <%= data.rating %></p>
 		  	<p>Phone: <%= data.formatted_phone_number %></p>
 		    <p>Address: <%= data.formatted_address %></p>
@@ -16,15 +16,15 @@
 		</div>
 
 		<div>
+			<h2>Leave a Review:</h2>
 			<form method="POST" action="/schedule/review">
 				<div>
-					<label name="username"><%= currentUser.username %></label>
+					<h4><%= currentUser.username %></h4>
 					<input type="hidden" value="<%= currentUser.id %>" name="userId">
 					<input type="hidden" value="<%= currentUser.username %>" name="username">
 					<input type="hidden" value="<%= data.place_id %>" name="placeId">
 				</div>
 				<div>
-					<label name="rating">Rating</label>
 					<div class="acidjs-rating-stars">
 				        <input type="radio" name="rating" id="group-1-0" value="5" /><label for="group-1-0"></label>
 				        <input type="radio" name="rating" id="group-1-1" value="4" /><label for="group-1-1"></label>
@@ -34,10 +34,9 @@
 					</div>
 				</div>
 				<div>
-					<label name="review">Review</label>
-					<input type="text" name="review" id="review">
+					<textarea rows="4" type="text" name="review" id="review" placeholder="Tell us something about the park!"></textarea> 
 				</div>
-				<input type="submit" value="Speak!">
+				<input type="submit" id="reviewBtn" value="Speak!">
 			</form>
 		</div>
 
@@ -45,8 +44,7 @@
 			<h2>Reviews:</h2>
 			<% reviews.forEach(function(review) { %>
 			<div>
-				<h4>User: <%= review.username %></h4>
-				<h5>Rating:</h5>
+				<h4><%= review.username %></h4>
 				<div class="acidjs-rating-stars acidjs-rating-disabled">
 					<form style="display: -webkit-inline-box">
 				        <input disabled="disabled" type="radio" <%if(review.rating === 5) { %> checked="checked" <% } %> name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label>
@@ -56,7 +54,7 @@
 				        <input disabled="disabled" type="radio" <%if(review.rating === 1) { %> checked="checked" <% } %> name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
 			        </form>
 				</div>
-				<p>Review: <%= review.reviews %></p>
+				<p><%= review.reviews %></p>
 				<% if(currentUser.id == review.userId) { %>
 					<a href="/schedule/review/<%= review.id %>" class="delete-link">Delete</a>
 				<% } %>
@@ -66,8 +64,7 @@
 
 			<% data.reviews.forEach(function(review) { %>
 			<div>
-				<h4>User: <%= review.author_name %></h4>
-				<h5>Rating:</h5>
+				<h4><%= review.author_name %></h4>
 				<div class="acidjs-rating-stars acidjs-rating-disabled">
 					<form style="display: -webkit-inline-box">
 				        <input disabled="disabled" type="radio" <%if(review.rating === 5) { %> checked="checked" <% } %> name="group-3" id="group-3-0" value="5" /><label for="group-3-0"></label>
@@ -77,7 +74,7 @@
 				        <input disabled="disabled" type="radio" <%if(review.rating === 1) { %> checked="checked" <% } %> name="group-3" id="group-3-4"  value="1" /><label for="group-3-4"></label>
 			        </form>
 				</div>
-				<p>Review: <%= review.text %></p>
+				<p><%= review.text %></p>
 				___________________________________________________________________
 			</div>
 			<% }) %>
