Added app description and fixed bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
-<h1 id="mainPageH1">Welcome to Dog MeetUp</h1>
-
+<div id="appNameAndDescription">
+  <h1 id="mainPageH1">Welcome to Dog MeetUp</h1>
+  <p id="appDescription" class="center-block">
+    Dog MeetUp was designed for dog owners who would like to schedule a time to meet other dogs at a park.
+    After logging in or registering you can access a parks schedules and reviews by RSVP'ing with a time and location.
+  </p>
+</div>
 
 <div class="row">
   <div class="col-xs-12 col-md-6">
