--- a/static/main.css
+++ b/static/main.css
@@ -6,6 +6,14 @@ a {
     color: black;
 }
 
+#appDescription {
+    max-width: 700px;
+}
+
+#appNameAndDescription {
+    text-align: center;
+}
+
 body {
     background-color: mintcream;
 }
@@ -21,6 +29,7 @@ h1 {
 .navbar {
     background-color: #EDFFFF;
 }
+
 
 
 /******************************
